create/UserPlant-and-associated-routes-OK
